deployment-1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-web-deploy
  labels:
    app: my-k8s-app
spec:

  selector:
    matchLabels:
      project: kgb

  template:
    metadata:
      labels:
        project: kgb
    spec:
      containers:
        - name: kgb-web
          image: adv4000/k8sphp:latest
          ports:
            - containerPort: 80
