deployment-2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-web-deploy-replicas
  labels:
    app: my-k8s-app
    env: prod
    owner: Nikolai
spec:
  replicas: 3
  selector:
    matchLabels:
      project: cia

  template:
    metadata:
      labels:
        project: cia
    spec:
      containers:
        - name: cia-web
          image: adv4000/k8sphp:version2
          ports:
            - containerPort: 80
