deployment-3.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: my-web-deployment-autoscaling
  labels:
    app  : my-k8s-application
    env  : prod
    owner: DenisAstahov
spec:
  selector:
    matchLabels:
      project: mossad
  template:
    metadata:
      labels:
        project: mossad
    spec:
      containers:
        - name : mossad-web
          image: adv4000/k8sphp:version2
          ports:
            - containerPort: 80
