pod-myweb-ver2.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-web
  labels: 
    env: prod
    app: main
    tier: frontend
    owner: Nikolai_Maloquiin
spec:
  containers:
    - name: container-apache
      image: adv4000/k8sphp
      ports:
        - containerPort: 80
