service-1.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: my-web-deployment
  labels:
    app : my-k8s-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      project: kgb

  template:
    metadata:
      labels:
        project: kgb   # Service will look for those PODS Labels!!!
    spec:
      containers:
        - name: kgb-web
          image: adv4000/k8sphp:latest
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: my-single-pod-service
  labels:
    env: prod
    owner: Nikolai
spec:
  selector:
    project: kgb   # Selecting Pods with those Labels
  ports:
    - name: app-listener
      protocol: TCP
      port: 80  # Port on Load Balancer
      targetPort: 80  # Port on POD
  type: LoadBalancer
