ingress-hosts.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hosts

spec:
  rules:
  - host: www.maloquiin.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
              service:
                  name: main
                  port:
                    number: 80

  - host: web1.maloquiin.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
                name: web1
                port:
                  number: 80

  - host: web2.maloquiin.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
                name: web2
                port:
                  number: 80

  - host: cat.maloquiin.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
                name: tomcat
                port:
                  number: 8080
